active mode for gitpod

--- a/src/main/resources/templates/diary.html
+++ b/src/main/resources/templates/diary.html
@@ -53,6 +53,7 @@
     </div>
 </section>
 
+<th:block th:replace="fragments/layout.html :: scriptFragment"></th:block>
 
 <!-- footer section -->
 <section class="container-fluid footer_section">
