--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -78,8 +78,8 @@
 </header>
 
 <th:block th:fragment="scriptFragment">
-    <script type="text/javascript" th:src="@{/assets/js/jquery-3.4.1.min.js}"></script>
-    <script type="text/javascript" th:src="@{/assets/js/bootstrap.js}"></script>
+<!--    <script type="text/javascript" th:src="@{/assets/js/jquery-3.4.1.min.js}"></script>-->
+<!--    <script type="text/javascript" th:src="@{/assets/js/bootstrap.js}"></script>-->
     <script type="text/javascript" th:src="@{/webjars/github-com-vuejs-vue/2.6.14/vue.js}"></script>
 </th:block>
 
