--- a/src/main/resources/templates/diary.html
+++ b/src/main/resources/templates/diary.html
@@ -19,21 +19,20 @@
             My diary
         </h3>
     </div>
-    <div class="container layout_padding2-top">
+    <div class="container layout_padding2-top" v-if="content != null">
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <form action="">
+                <form action="" v-if="!save_btn_event">
                     <div>
                     <textarea placeholder="텍스트를 입력해 주세요"
                               style="width: 100%; border: 0;padding: 15px 12px;background-color: #f2f2f2;outline: none;margin: 10px 0; height:250px;"
-                              :value="content"
-                              @input="event => content = event.target.value"
+                              :value="content.text"
+                              @input="event => content.text = event.target.value"
                     >
                     </textarea>
                     </div>
 
                     <div class="d-flex justify-content-center "
-                         v-if="!save_btn_event"
                          v-on:click="clickSaveBtnHandler($event)"
                     >
                         <button type="button">
@@ -42,8 +41,17 @@
 
                     </div>
 
+                </form>
+                <form action="" v-if="save_btn_event">
+                    <div>
+                    <textarea placeholder="텍스트를 입력해 주세요"
+                              style="width: 100%; border: 0;padding: 15px 12px;background-color: #f2f2f2;outline: none;margin: 10px 0; height:250px;"
+                              :value="content.translateSentence.text"
+                    >
+                    </textarea>
+                    </div>
+
                     <div class="d-flex justify-content-center "
-                         v-if="save_btn_event"
                     >
 
                         <button onclick="location.href='../html/index.html';" type="button">저장</button>
@@ -79,12 +87,34 @@
             save_btn_event: false,
             content: null,
         },
+        mounted: function () {
+
+            fetch('/diary/new', {method: 'POST'})
+                .then((res) => res.json())
+                .then((data) => {
+                    this.content = data
+
+                    console.log(this.content)
+                })
+        },
         methods: {
             clickSaveBtnHandler: function (e) {
                 e.preventDefault()
 
-                this.save_btn_event = true
+                const bod = new FormData()
+
+                bod.append('_content', JSON.stringify(this.content))
+
+                fetch('/diary', {method: 'PUT', body: bod})
+                    .then((res) => res.json())
+                    .then((data) => {
+                        this.content = data
+
+                        this.save_btn_event = true
+                    })
+
             }
+            //TODO
         }
     })
 </script>
