--- a/src/main/resources/templates/diary.html
+++ b/src/main/resources/templates/diary.html
@@ -101,19 +101,48 @@
             <div class="row">
                 <div class="col-md-6 mx-auto">
                     <form action="">
-                        <div style="position: relative;">
-                            <span class="publickey1">PUBLIC:</span>
-                            <input class="publickey2" type="text" disabled value="dfefes89tyty">
-                        </div>
                         <div>
                             <span class="publickey1">PRIVATE:</span>
-                            <input class="publickey2" type="text" value="dfefes89tyty12degh" disabled>
+                            <input class="publickey2" type="text" :value="content.securityKey" disabled>
                         </div>
                         <div class="d-flex justify-content-center ">
-                            <button type="button" onclick="location.href='../html/create.html';">암호 직접 설정하기</button>
-                            <button class="disactiveButton" type="button" onclick="location.href='../html/index.html';">
+                            <button type="button" v-on:click="clickDirectSettingsBtn">암호 직접 설정하기</button>
+                            <button class="disactiveButton" type="button"
+                                    v-on:click="clickCloseSecretBtn">
                                 닫기
                             </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="contact_section layout_padding" v-if="vw_create">
+        <div class="custom_heading-container">
+            <h3 class=" ">
+                Settings
+            </h3>
+        </div>
+
+        <div class="container layout_padding2-top">
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <form action="">
+                        <div>
+                            <select name="" id="">
+                                <option value="" disabled selected>질문을 선택하세요</option>
+                                <option value="">제일 좋아하는 탄산음료는?</option>
+                                <option value="">제일 좋아하는 동물은?</option>
+                                <option value="">제일 좋아하는 은식은?</option>
+                            </select>
+                        </div>
+                        <div>
+                            <input type="text" placeholder="답을 입력해주세요" value="">
+                        </div>
+                        <div class="d-flex justify-content-center ">
+                            <button type="button" onclick="location.href='../html/index.html';">저장</button>
                         </div>
                     </form>
                 </div>
@@ -144,6 +173,7 @@
             content: null,
             vw1: true,
             vw2: false,
+            vw_create: false,
         },
         mounted: function () {
 
@@ -158,7 +188,9 @@
                 e.preventDefault()
 
                 if (this.content.text == '') {
-                alert("내없이 습다")
+                    alert("내용이 없습니다")
+
+                    return
                 }
 
                 const bod = new FormData()
@@ -193,6 +225,17 @@
             clickSecretBtn: function () {
                 this.vw1 = !this.vw1
                 this.vw2 = !this.vw2
+            },
+
+            clickCloseSecretBtn: function () {
+                window.location.replace('/')
+            },
+
+            clickDirectSettingsBtn: function () {
+                this.vw1 = false
+                this.vw2 = false
+                this.vw_create = true
+
             }
         }
     })
