--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -52,18 +52,18 @@
                 <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
                     <ul class="navbar-nav  ">
                         <li class="nav-item active" th:class="${name == 'home' ? 'nav-item active' : 'nav-item'}">
-                            <a class="nav-link" href="index.html" th:href="@{/}">홈 <span
+                            <a class="nav-link" href="index.html" th:href="@{/}">홈<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active" th:class="${name == 'about' ? 'nav-item active' : 'nav-item'}">
-                            <a class="nav-link" href="about.html" th:href="@{/about}"> 소개 </a>
+                            <a class="nav-link" href="about.html" th:href="@{/about}">소개</a>
                         </li>
                         <li class="nav-item active" th:class="${name == 'diary' ? 'nav-item active' : 'nav-item'}">
-                            <a class="nav-link" href="diary.html" th:href="@{/diary}"> 일기를 쓰기</a>
+                            <a class="nav-link" href="diary.html" th:href="@{/diary}">일기</a>
                         </li>
-                        <li class="nav-item active" th:class="${name == 'crackdiary' ? 'nav-item active' : 'nav-item'}">
-                            <a class="nav-link" href="crack_diary.html" th:href="@{/crackdiary}">일기를 풀기</a>
-                        </li>
+                        <!--                        <li class="nav-item active" th:class="${name == 'crackdiary' ? 'nav-item active' : 'nav-item'}">-->
+                        <!--                            <a class="nav-link" href="crack_diary.html" th:href="@{/crackdiary}">일기를 풀기</a>-->
+                        <!--                        </li>-->
                         <!-- <li class="nav-item">
                           <a class="nav-link" href="#">Login</a>
                         </li> -->
@@ -78,8 +78,8 @@
 </header>
 
 <th:block th:fragment="scriptFragment">
-<!--    <script type="text/javascript" th:src="@{/assets/js/jquery-3.4.1.min.js}"></script>-->
-<!--    <script type="text/javascript" th:src="@{/assets/js/bootstrap.js}"></script>-->
+    <!--    <script type="text/javascript" th:src="@{/assets/js/jquery-3.4.1.min.js}"></script>-->
+    <!--    <script type="text/javascript" th:src="@{/assets/js/bootstrap.js}"></script>-->
     <script type="text/javascript" th:src="@{/webjars/github-com-vuejs-vue/2.6.14/vue.js}"></script>
 </th:block>
 
